GNOME Bugzilla – Bug 327707
XDG folders shouldn't be bookmarkable
Last modified: 2012-10-22 17:35:31 UTC
Please describe the problem: It seems that you have the ability to add $HOME to bookmark list. Steps to reproduce: 1. Open $HOME in spatial or browser window 2. Select Places -> Add Bookmark 3. Look the content of Places menu/pane Actual results: A bookmark to $HOME is added Expected results: Well, do nothing, or desensitize Add Bookmark entry when the current location is yet in bookmark, or display an error alert saying "Bookmark yet available" Does this happen every time? Other information:
Same probably goes for Desktop and maybe other special folders too.
Totally agree. Good catch. 'Add Bookmark' should be greyed-out when in an XDG folder.
There is no effect from adding the bookmark but we should certainly make the Add Bookmark menu item insensitive when the current directory is already a bookmark.
*** Bug 652656 has been marked as a duplicate of this bug. ***
Pushed a fix for this to git master now, thanks for the report.