window: make Bookmark this Location insensitive when it's bookmarked

If the directory is in the bookmark list already (or if it's the home
directory), don't offer to bookmark it again.

https://bugzilla.gnome.org/show_bug.cgi?id=327707